# labo-de-micros-tpf

./: README.md
.metadata/: version.ini
CodeMergeV1/CodeMerge_V1/: .cproject  .project  CodeMerge_V1 PE Debug.launch  CodeMerge_V1 PE Release.launch  CodeMerge_V1.mex
I2S+I2C(UDA1380)/Debug_dmamux/: dmamux_in_pit.txt
I2S+I2C(UDA1380)/Debug_i2s/: better_i2s_before_pit.txt  better_i2s_in_pit_modified.txt  better_i2s_start.txt  i2s_before_pit.txt  order_peripheral_reg.py
I2S+I2C(UDA1380)/debug i2s-dma old/: after_dma_mux_config.txt  i2s_after.txt  i2s_before - Copy.txt  init_dma_config.txt
I2S+I2C(UDA1380)/old_files/: notas.txt
Lcd/Cosas que use de base/: GFX_Library.c  ILI9341.c  Links.txt  main.c
Lcd/lcd_test/: .cproject  .project  lcd_test PE Debug.launch  lcd_test PE Release.launch  lcd_test.mex
audio/: README.md
audio/old_files/: mp3enflash+decode+i2s+dma.drawio
blink-example/.metadata/: version.ini
bluetooth/test16/: .cproject  .project  test16 PE Debug.launch  test16 PE Release.launch  test16.mex
ecg-monitor/: angular.json  ionic.config.json  package-lock.json  package.json
flash_programming/: flash_erase_program_verify.c
flash_programming/get_MP3_bytes/: gen_byte_array_from_mp3.py  mp3_to_bytes.py  sonic_16k_bytes.txt  sonic_bytes.txt  (+1 more)
mp3_decode/: decode.txt  link.txt
mp3_decode/old_files/mp3_dec/: CMakeLists.txt  MP3Decoder.c  MP3Decoder.h  main.c  thomas_16k_music_array.h
music_gen/: get_music_values.py  music.h  music_16bit_16khz_generated.h  music_16bit_16khz_posta_generated.h  plot_and_get_music_h_wav.py
pymp3toarray/: test.py
(+654 files in other folders)
